# fql

./: .gitignore  Cargo.toml  LICENSE  README.md
fql/: Cargo.toml  README.md
fql-cli/: Cargo.toml
fql-cli/src/: main.rs
fql-ts/: Cargo.toml  README.md
fql-ts/src/: lib.rs
fql-web-demo/: App.tsx  README.md  index.css  index.html  index.ts  index.tsx  package-lock.json  package.json  snowpack.config.js
fql/src/: ast.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  spanned.rs  syntax.rs
fql/src/ast/: expr.rs  literal.rs  property.rs
fql/src/grammar/: expr.rs  literal.rs  operand.rs  operator.rs  property.rs
fql/src/parser/: error.rs  marker.rs  sink.rs  source.rs
