[package]
name = "fql"
version = "0.1.0"
edition = "2021"
authors = [
    "Ted Driggs <ted.driggs@outlook.com>"
]
license = "MIT"
repository = "https://github.com/TedDriggs/fql"

[dependencies]
drop_bomb = "0.1.5"
expect-test = "1.2.2"
logos = "0.12.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.15.4"
text-size = "1.1.0"
